<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:fillViewport="true">

    <LinearLayout
            android:id="@+id/layout_login_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" >

            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_et_senha_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:passwordToggleEnabled="true" >

            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_senha_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_senha"
                    android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_entrar_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_login_entrar"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp" />

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_login_cadastre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_cadastre"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
        />

    </LinearLayout>

</ScrollView>
